# qq-group-guard

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  GROUP_RULES.md  README.md  USAGE_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  start.bat
napcat-data/config/: onebot11.json
plugins/group_guard/: __init__.py  activity_rank.py  ad_detector.py  admin_cmd.py  ai_checker.py  bot_defense.py  brainwash.py  checker.py  checkin.py  comfort.py  config.py  fortune.py  group_config.py  group_lifecycle.py  image_checker.py  keyword_rules.py  llm.py  morning_brief.py  moyuren.py  offline_notify.py  penguin_chat.py  persona.py  punisher.py  rules.py  settings.py  spam_detector.py  storage.py  store.py  welcome.py
